# bb-floppy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  PINMUX.txt  README.md  arm-interface.h  bb-floppy.c  bb-floppy.p  bb-floppy.p.bak  cape-bb-floppy-00A0.dts  firmware.p  floppy-interface.h  list.c  list.h  main.c  mfm.h  process.c  pru-notes.txt  pru-setup.c  pru-setup.h  read_track_timing.c  read_track_timing.h  scp.c  scp.h
cmake/: build_helpers.cmake
src/: arm-interface.h  embed.s  fixup.c  flux_data.c  flux_data.h  main.c  pru-setup.c  pru-setup.h  read_flux.c  read_flux.h  read_flux_opts.c  read_flux_opts.h  read_flux_simple.c  read_flux_simple.h  read_track_timing.c  read_track_timing.h  scp.c  write_flux.c  write_flux.h  write_flux_opts.c  write_flux_opts.h
src/caps_parser/: CMakeLists.txt  caps_parser.c  caps_parser.h  test_caps_samples.c  test_parser.c
src/mfm_utils/: mfm_utils.c  mfm_utils.h
tests/: Makefile  test-motor.c  test-motor.p  test-move-head-down.c  test-move-head-down.p  test-move-head-up.c  test-move-head-up.p  test-reset-head.c  test-reset-head.p
